[bug/#30]-bug-meds (#36)